# mvideo_eldorado_parser

./: .gitignore  config.yaml  e_product_ids.txt  m_product_ids.txt  product_ids.txt  pyproject.toml
mvideo_eldorado_parser/: config.py  main.py
mvideo_eldorado_parser/api/: base_store_api.py  eldorado_api.py  models.py  mvideo_api.py  store_api.py
mvideo_eldorado_parser/app/: bot.py
mvideo_eldorado_parser/app/handlers/: common_commands.py  products_commands.py  store_commands.py
mvideo_eldorado_parser/app/markups/: __init__.py  main_markups.py
mvideo_eldorado_parser/config/: config.py
mvideo_eldorado_parser/parsing/: mvideo.py
mvideo_eldorado_parser/selenium_parsing/: driver.py  mvideo.py
mvideo_eldorado_parser/utils/: min.py
tests/: test_mvideo_eldorado_parser.py
